--- a/themes/minimalistic/@assets/css/main.twnd.css
+++ b/themes/minimalistic/@assets/css/main.twnd.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  font-family: 'Noto Sans Display', sans-serif;
+html,
+body {
+  font-family: "Noto Sans Display", sans-serif;
 }
 
 html,
